Bug 317909 - Two chats with the same targetHandle causes message loss.
Summary: Two chats with the same targetHandle causes message loss.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: 0.5.3
Platform: openSUSE Linux
: NOR major
Target Milestone: 0.6.1
Assignee: Telepathy Bugs
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2013-04-06 05:16 UTC by Ruchir Brahmbhatt
Modified: 2013-04-12 19:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ruchir Brahmbhatt 2013-04-06 05:16:55 UTC
I couldn't put proper summary but I'll try to describe the problem in detail.
For example I have 2 gtalk accounts as below
fname.lname@gmail.com
fname.lname@gapps.com

I started discussion with one of the contacts in account fname.lname@gmail.com. Now if someone sends me message on fname.lname@gapps.com I see systray notification but when I click on it, it opens same chat window of fname.lname@gmail.com instead of new chat window of account fname.lname@gapps.com. Messages are received, later I can see them in chat history but they don't show up when they're received. So I get feeling of false alarms of new message and the sender thinks I didn't receive message or I don't care to reply. :)

Reproducible: Always

Steps to Reproduce:
1. See Details
Actual Results:  
New chat window not opening for new message.

Expected Results:  
New chat window should show new messages.
Comment 1 David Edmundson 2013-04-06 18:43:15 UTC
Confirming this bug

ChatWindow::getTab() needs to check Tp::Account as well as targetHandle.

Should be a simple fix.
Comment 2 David Edmundson 2013-04-12 19:16:44 UTC
Git commit 18d1930c9aed1cd4130adb963f21f9b03b1089ef by David Edmundson.
Committed on 12/04/2013 at 18:31.
Pushed by davidedmundson into branch 'kde-telepathy-0.6'.

Check account as well as target ID when searching for existing channels
REVIEW: 109979
FIXED-IN: 0.6.1

M  +4    -3    app/chat-window.cpp
M  +1    -1    app/chat-window.h
M  +1    -1    app/telepathy-chat-ui.cpp

http://commits.kde.org/telepathy-text-ui/18d1930c9aed1cd4130adb963f21f9b03b1089ef