Check account as well as target ID when searching for existing channels

BUG: 317909
REVIEW: 109979
FIXED-IN: 0.6.1